// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BerthPricing renders noData message when there is no data 1`] = `
<div
  class="card berthPricing"
>
  <div
    class="cardHeader"
  >
    <span
      class="title"
    >
      Venepaikka
    </span>
  </div>
  <div
    class="cardBody"
  >
    <article
      class="section"
    >
      <section
        class="body"
      >
        Perushinta. Hinnat sisältävät alv 24 %.
      </section>
    </article>
    <div>
      <div
        class="tableWrapper"
      >
        <div
          class="table basic noMainHeader"
          role="table"
          style="min-width: 562.5px;"
        >
          <div
            class="stickyHeaders"
          >
            <div
              class="header"
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 562.5px;"
            >
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 225 0 auto; min-width: 225px; width: 225px; cursor: pointer;"
                title="Toggle SortBy"
              >
                Leveys
                <div
                  class="sortArrowWrapper isSorted"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 112.5px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                1
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 112.5px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                2
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 112.5px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                3
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            role="rowgroup"
          >
            <div
              class="rowWrapper"
              role="row"
            >
              <div
                class="tableCell"
              >
                Ei tietoja
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BerthPricing renders normally 1`] = `
<div
  class="card berthPricing"
>
  <div
    class="cardHeader"
  >
    <span
      class="title"
    >
      Venepaikka
    </span>
  </div>
  <div
    class="cardBody"
  >
    <article
      class="section"
    >
      <section
        class="body"
      >
        Perushinta. Hinnat sisältävät alv 24 %.
      </section>
    </article>
    <div>
      <div
        class="tableWrapper"
      >
        <div
          class="table basic noMainHeader"
          role="table"
          style="min-width: 562.5px;"
        >
          <div
            class="stickyHeaders"
          >
            <div
              class="header"
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 562.5px;"
            >
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 225 0 auto; min-width: 225px; width: 225px; cursor: pointer;"
                title="Toggle SortBy"
              >
                Leveys
                <div
                  class="sortArrowWrapper isSorted"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 112.5px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                1
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 112.5px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                2
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 112.5px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                3
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            role="rowgroup"
          >
            <div
              class="rowWrapper"
            >
              <div
                role="row"
                style="display: flex; flex: 1 0 auto; min-width: 562.5px;"
              >
                <div
                  class="tableCell tableCell"
                  role="cell"
                  style="box-sizing: border-box; flex: 225 0 auto; min-width: 225px; width: 225px;"
                >
                  3,0 m - 7,0 m
                </div>
                <div
                  class="tableCell tableCell"
                  role="cell"
                  style="box-sizing: border-box; flex: 150 0 auto; min-width: 112.5px; width: 150px;"
                >
                  <div
                    class="grayCell"
                  >
                    50,00 €
                  </div>
                </div>
                <div
                  class="tableCell tableCell"
                  role="cell"
                  style="box-sizing: border-box; flex: 150 0 auto; min-width: 112.5px; width: 150px;"
                >
                  <div
                    class="grayCell"
                  >
                    75,00 €
                  </div>
                </div>
                <div
                  class="tableCell tableCell"
                  role="cell"
                  style="box-sizing: border-box; flex: 150 0 auto; min-width: 112.5px; width: 150px;"
                >
                  <div
                    class="grayCell"
                  >
                    100,00 €
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
